# openai-responses-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: docs.yml  pr.yml
docs/: coverage.md  index.md  quickstart.md
docs/endpoints/: chat.md  embeddings.md  files.md  index.md  runs.md
docs/endpoints/assistants/: assistants.md  messages.md  run_steps.md  runs.md  threads.md
docs/routes/: index.md
docs/stylesheets/: icons.css
docs/user_guide/: async.md  chaining.md  decorator.md  decorators.md  external.md  helpers.md  index.md  mock.md  mockers.md  mocks.md  overview.md  responses.md  routes.md  state.md  streaming.md
examples/: example.json  test_assistants.py  test_assistants_api.py  test_async_client.py  test_azure_client.py  test_chat_completion.py  test_chat_completion_api.py  test_context_manager.py  test_custom_response_handler.py  test_embeddings.py  test_embeddings_api.py  test_explicit_model.py  test_files.py  test_files_api.py  test_langchain_openai.py  test_messages.py  test_models.py  test_moderations.py  test_parsed_chat_completion.py  test_raw_httpx_response.py  test_router_usage.py  test_run_steps.py  test_runs.py  test_state_store_fixture.py  test_streaming.py  test_streaming_async.py  test_streaming_simple.py  test_threads.py  test_threads_api.py  test_transport.py  test_vector_store_file_batches.py  test_vector_store_files.py  test_vector_stores.py
src/openai_responses/: __init__.py  _api.py  _mock.py  decorators.py  plugin.py  state.py  streaming.py  tokens.py  utils.py
src/openai_responses/_constants/: __init__.py  system_models.py
src/openai_responses/_routes/: __init__.py  _base.py  assistants.py  base.py  chat.py  embeddings.py  files.py  messages.py  models.py  moderation.py  run_steps.py  runs.py  threads.py  vector_store_file_batches.py  vector_store_files.py  vector_stores.py
src/openai_responses/_routes/beta/: __init__.py  assistants.py  chat.py  messages.py  run_steps.py  runs.py  threads.py  vector_store_file_batches.py  vector_store_files.py  vector_stores.py
src/openai_responses/_stores/: __init__.py  state_store.py
src/openai_responses/_types/: generics.py  protocols.py
src/openai_responses/_utils/: aio.py  copy.py  faker.py  filter.py  serde.py  time.py  token.py
src/openai_responses/endpoints/: _base.py  _partial_schemas.py  assistants.py  chat.py  embeddings.py  files.py  messages.py  run_steps.py  runs.py  threads.py
src/openai_responses/ext/: __init__.py  httpx.py  respx.py
src/openai_responses/helpers/: builders.py  state_store.py
src/openai_responses/stores/: __init__.py  content_store.py  state_store.py
tests/unit/: test_decorators.py  test_state.py  test_state_store.py  test_tokens.py
tests/unit/_utils/: test_faker.py
(+30 files in other folders)
